# fastapi

./: auth.py  config.py  db.sqlite3  main.py  notes.tsx  pyproject.toml  schemas.py
migrations/models/: 0_20251027113633_init.py  0_20251027145437_init.py
models/: author_model.py
